Add isSystem flag to block modification of system entities
